Fix page title tittle on mobile

--- a/src/components/home/Hero/Title.module.css
+++ b/src/components/home/Hero/Title.module.css
@@ -8,8 +8,8 @@
   top: 0;
   left: 0;
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 12px;
+  height: 12px;
 }
 
 .planet {
